# poly-myket

./: CLAUDE.md  Makefile  README.md  auth.md  project_proposal.md
.github/workflows/: build-app.yml  migrate.yml  (+1 more)
poly-myket-app/: .env  .gitignore  CLAUDE.md  README.md  app.json  package-lock.json  package.json
poly-myket-backend/: .env.example  .gitignore  CLAUDE.md  README.md  alembic.ini  dev.db  pyproject.toml  requirements.txt  vercel.json
poly-myket-backend/alembic/: env.py
poly-myket-backend/alembic/versions/: 13b5620ad870_add_admin_roles_and_credit_adjustments.py  1eb2e18b091f_add_image_url_to_users.py  369be0577cf6_add_starting_credits_to_groups.py  537477e90bfa_add_resolved_at_to_bets_and_update_bet_.py  623ad60924ad_initial_schema.py  c67c8e928c0c_add_email_notification_preferences_to_.py  ec8f67eaaeea_add_clerk_id_to_users.py
poly-myket-backend/app/: config.py  database.py  dependencies.py  main.py
poly-myket-backend/app/models/: __init__.py  base.py  bet.py  credit_adjustment.py  group.py  user.py  wager.py
poly-myket-backend/app/routers/: bets.py  groups.py  users.py  wagers.py
poly-myket-backend/app/schemas/: bet.py  group.py  user.py  wager.py
poly-myket-backend/app/services/: email.py
poly-myket-backend/tests/: conftest.py  test_bets.py  test_credit_system.py  test_dependencies.py  test_email_service.py  test_groups.py  test_health.py  test_users.py  test_wagers.py
poly-myket-frontend/: CLAUDE.md  README.md  package-lock.json  package.json
poly-myket-shared/: .gitignore  CLAUDE.md  package-lock.json  package.json  tsconfig.json
(+58 files in other folders)
